--- a/assets/css/projeto1.css
+++ b/assets/css/projeto1.css
@@ -118,9 +118,12 @@ nav svg {
     display: none;
 }
 
-
 #close-menu{
     width: 2.4em;        
+}
+
+.active-section {
+    border-bottom: 2px solid var(--white);
 }
 
 /* Header */
