--- a/assets/css/projeto1.css
+++ b/assets/css/projeto1.css
@@ -1,693 +1,327 @@
-@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Quicksand:wght@300..700&display=swap');
-
-:root {
-    --dark-blue: #030637;
-    --preto: #0a0a0a;
-    --white: #F5F3F5;
-    --pink: #FF1053;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Quicksand", sans-serif;
-    font-size: 18px;
-}
-
-html, body {
-    height: 100%;
-}
-
-html {
-    scroll-behavior: smooth;
-}
-
-#sparkles {
-    width: 100%;
-    height: 100vh;
-    position: absolute;
-    z-index: 3;
-    top: 0;
-    left: 0;
-}
-
-main {
-    width: 100%;
-}
-
-section {
-    position: relative;
-    z-index: 2;
-    padding: 45px;
-    min-height: 100vh;
-}
-
-a {
-    text-decoration: none;
-}
-
-
-/* Efeito de céu estrelado */
-
-.stars {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    height: 1px;
-    width: 1px;
-    background-color: #fff;
-    border-radius: 50%;
-    box-shadow: -41vw -44vh 2px 2px #fff,45vw -17vh 3px 2px #fff,36vw 31vh 3px 2px #fff,3vw -27vh 2px 2px #fff,38vw -9vh 2px 2px #fff,25vw -22vh 2px 2px #fff,4vw 34vh 3px 2px #fff,39vw -30vh 3px 2px #fff,3vw 33vh 2px 2px #fff,-26vw -28vh 2px 2px #fff,7vw -42vh 2px 2px #fff,36vw 8vh 3px 2px #fff,-32vw 46vh 2px 2px #fff,23vw 36vh 3px 2px #fff,43vw -10vh 3px 2px #fff,3vw -29vh 3px 2px #fff,4vw 23vh 3px 2px #fff,-48vw 12vh 2px 2px #fff,3vw -4vh 3px 2px #fff,25vw 38vh 2px 2px #fff,-48vw 41vh 2px 2px #fff,-33vw 6vh 2px 2px #fff,-6vw -32vh 3px 2px #fff,-18vw -31vh 3px 2px #fff,-29vw -12vh 2px 2px #fff,-6vw 23vh 2px 2px #fff,33vw -6vh 2px 2px #fff,-39vw 45vh 2px 2px #fff,34vw 31vh 2px 2px #fff,-42vw 4vh 3px 2px #fff,-13vw 35vh 2px 2px #fff,-50vw -45vh 2px 2px #fff,-19vw 0vh 2px 2px #fff,-8vw -36vh 3px 2px #fff,-20vw -20vh 2px 2px #fff,33vw -12vh 3px 2px #fff,-42vw -25vh 2px 2px #fff,-31vw -42vh 2px 2px #fff,40vw -30vh 3px 2px #fff,47vw 35vh 2px 2px #fff,26vw 32vh 3px 2px #fff,-23vw -31vh 3px 2px #fff,37vw -20vh 2px 2px #fff,37vw -3vh 3px 2px #fff,34vw -9vh 3px 2px #fff,-41vw 7vh 2px 2px #fff,43vw 31vh 3px 2px #fff,25vw -1vh 3px 2px #fff,-46vw -7vh 2px 2px #fff,-8vw 18vh 3px 2px #fff;
-    box-shadow: -39vw 17vh 3px 1px #fff,20vw -43vh 3px 1px #fff,15vw -35vh 4px 1px #fff,-18vw -32vh 1px 1px #fff,49vw 13vh 1px 1px #fff,47vw 15vh 1px 1px #fff,24vw -46vh 3px 1px #fff,-7vw -23vh 1px 1px #fff,-2vw 44vh 4px 1px #fff,-41vw 42vh 2px 1px #fff,1vw 32vh 1px 1px #fff,-20vw -1vh 2px 1px #fff,-44vw 28vh 2px 1px #fff,50vw -33vh 4px 1px #fff,35vw -36vh 3px 1px #fff,-31vw 20vh 3px 1px #fff,-38vw 44vh 4px 1px #fff,14vw -19vh 1px 1px #fff,49vw -17vh 4px 1px #fff,-22vw -18vh 4px 1px #fff,17vw -33vh 2px 1px #fff,8vw 31vh 1px 1px #fff,-41vw 35vh 1px 1px #fff,-2vw 32vh 3px 1px #fff,-21vw 40vh 2px 1px #fff,27vw 16vh 3px 1px #fff,-32vw -50vh 2px 1px #fff,-41vw -2vh 1px 1px #fff,-26vw -42vh 3px 1px #fff,-32vw -41vh 3px 1px #fff,32vw 22vh 3px 1px #fff,21vw -39vh 1px 1px #fff,47vw 5vh 4px 1px #fff,-49vw -14vh 2px 1px #fff,-36vw -10vh 2px 1px #fff,-31vw -12vh 4px 1px #fff,3vw -15vh 2px 1px #fff,-47vw -31vh 4px 1px #fff,-21vw -20vh 2px 1px #fff,-26vw -22vh 2px 1px #fff,33vw 0vh 3px 1px #fff,8vw 30vh 2px 1px #fff,-1vw -24vh 1px 1px #fff,33vw -38vh 3px 1px #fff,34vw -21vh 4px 1px #fff,-28vw -6vh 4px 1px #fff,-48vw 16vh 4px 1px #fff,-50vw -44vh 4px 1px #fff,-49vw 46vh 3px 1px #fff,21vw -22vh 4px 1px #fff,-4vw 36vh 3px 1px #fff,-8vw -30vh 4px 1px #fff,45vw -25vh 3px 1px #fff,-28vw 40vh 2px 1px #fff,-32vw 11vh 4px 1px #fff,24vw 24vh 2px 1px #fff,11vw 38vh 3px 1px #fff,36vw -1vh 4px 1px #fff,48vw 42vh 1px 1px #fff,-49vw -37vh 1px 1px #fff,1vw -16vh 4px 1px #fff,-15vw 33vh 1px 1px #fff,10vw -25vh 2px 1px #fff,-18vw -45vh 2px 1px #fff,-21vw 41vh 1px 1px #fff,19vw 25vh 1px 1px #fff,8vw -23vh 2px 1px #fff,37vw 2vh 2px 1px #fff,-42vw -10vh 1px 1px #fff,-30vw -50vh 1px 1px #fff,-9vw -9vh 3px 1px #fff,-26vw 10vh 2px 1px #fff,15vw -30vh 2px 1px #fff,-4vw 7vh 3px 1px #fff,-45vw 13vh 1px 1px #fff,28vw 6vh 2px 1px #fff,6vw -28vh 1px 1px #fff,-30vw -43vh 4px 1px #fff,-14vw -9vh 3px 1px #fff,-19vw 43vh 1px 1px #fff,25vw 4vh 2px 1px #fff,-37vw -2vh 3px 1px #fff,-23vw -3vh 4px 1px #fff,2vw 2vh 2px 1px #fff,-12vw -41vh 2px 1px #fff,4vw 26vh 1px 1px #fff,-37vw -13vh 3px 1px #fff,32vw -13vh 4px 1px #fff,13vw -50vh 2px 1px #fff,-30vw 40vh 1px 1px #fff,-8vw 17vh 3px 1px #fff,-43vw -43vh 2px 1px #fff,17vw 33vh 1px 1px #fff,40vw -12vh 1px 1px #fff,12vw 41vh 2px 1px #fff,-43vw -32vh 1px 1px #fff,-11vw 23vh 2px 1px #fff,-20vw 19vh 4px 1px #fff,19vw 17vh 3px 1px #fff,47vw 4vh 3px 1px #fff;
-    animation: zoom 10s alternate infinite;
-}
-
-@keyframes zoom {
-    0%{
-        transform: scale(1);
-    }
-    100%{
-        transform: scale(1.2);
-    }
-}
-
-/* Menu */
-
-nav {
-    position: fixed;
-    top: 0;
-    right: 0;
-    z-index: 4;
-    display: flex;
-    justify-content: end;
-    width: 100vw;
-    background: linear-gradient(0deg, var(--preto) 0%, var(--dark-blue) 100%);
-}
-
-.nav * {
-    transition: all .35s ease;
-}
-
-nav ul {
-    display: flex;
-    list-style: none;
-    margin: 25px 45px;
-}
-
-nav ul li {
-    margin-left: 30px;
-}
-
-nav a {
-    font-size: 1.2em;
-    color: var(--white);
-    padding: 10px;
-    margin-left: 30px;
-
-}
-
-nav a:hover{
-    border-bottom: 1px solid var(--white);
-}
-
-nav svg {
-    color: var(--white);
-    width: 2.2em;
-    margin: 25px 45px;
-    display: none;
-}
-
-#close-menu{
-    width: 2.4em;        
-}
-
-.active-section {
-    border-bottom: 2px solid var(--white);
-}
-
-/* Header */
-
-header {
-    background: linear-gradient(0deg, var(--preto) 0%, var(--dark-blue) 100%);
-    height: 100vh;
-    color: var(--white);
-    position: relative;
-}
-
-#title-name {
-    position: absolute;
-    bottom: 0;
-    margin: 45px;
-}
-
-h1 {
-    font-family: "Gloria Hallelujah", cursive;
-    font-size: 4em;
-}
-
-h2 {
-    font-size: 2.5em;
-}
-
-
-/* About */
-
-#about {
-    background-color: var(--dark-blue);
-    display: flex;
-    flex-wrap: wrap;
-    color: var(--white);
-}
-
-.col-1 {
-    width: 35%;
-    padding: 70px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.square-container {
-    width: 100%;
-    position: relative;
-    padding-bottom: 100%;
-    overflow: hidden;
-    border-radius: 50%;
-}
-
-#profile {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 50%;
-    border-left: 0.6em solid white;
-    border-bottom: 0.6em solid white;
-    border-right: 0.6em dotted white;
-    border-top: 0.6em dotted white;
-}
-
-.col-2 {
-    width: 65%;
-    display: flex;
-    align-items: center;
-}
-
-h3 {
-    font-family: "Gloria Hallelujah", cursive;
-    font-size: 3em;
-    margin-bottom: 20px;
-}
-
-.icones {
-    margin-top: 30px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-.icone {
-    margin: 0 30px;
-    color: rgba(255, 255, 255, 0.5);
-}
-
-.icone:hover {
-    filter: drop-shadow(0 0 10px var(--white));
-}
-
-p {
-    text-align: start;
-    text-indent: 2em;
-    font-size: 1.3em;
-    margin-bottom: 10px;
-}
-
 /* More Information */
 
 #more-information {
-    background: rgb(2, 3, 11);
-    color: var(--white);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    z-index: 1;
+  background: linear-gradient(135deg, #020b0f 0%, #0f0f23 100%);
+  color: var(--white);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  z-index: 1;
+  position: relative;
+}
+
+#more-information::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: radial-gradient(
+      circle at 30% 80%,
+      rgba(102, 126, 234, 0.1) 0%,
+      transparent 50%
+    ),
+    radial-gradient(
+      circle at 80% 20%,
+      rgba(255, 16, 83, 0.1) 0%,
+      transparent 50%
+    );
+  z-index: -1;
 }
 
 .items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin: 35px 0 15px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 35px 0 15px 0;
 }
 
 .item {
-    width: 400px;
-    height: 400px;
-    padding: 20px;
-    border-radius: 30px;
-    background: var(--white);
-    margin: 10px;
+  width: 400px;
+  height: 400px;
+  border-radius: 30px;
+  margin: 10px;
 }
 
 .card {
-    width: 100%;
-    height: 100%;
-    transform-style: preserve-3d;
-    transition: transform 0.5s;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: transform 0.5s;
 }
 
 .item:hover .card {
-    transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 .item:hover {
-    filter: brightness(0.9)
+  filter: brightness(0.9);
 }
 
 .face {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    backface-visibility: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  backface-visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .front {
-    transform: rotateY(0deg);
-    padding: 100px;
+  transform: rotateY(0deg);
+  padding: 100px;
 }
 
 .front svg {
-    object-fit: cover;
+  object-fit: cover;
 }
 
 .back {
-    transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
-.text h4{
-    font-size: 1.5em;
-    color: var(--preto);
-    text-align: center;
-    margin-bottom: 20px;
+.text h4 {
+  font-size: 1.5em;
+  color: var(--preto);
+  text-align: center;
+  margin-bottom: 20px;
 }
 
-.text p{
-    font-size: 1.2em;
-    color: var(--preto);
-    text-align: center;
+.text p {
+  font-size: 1.2em;
+  color: var(--preto);
+  text-align: center;
 }
 
 /* Gallery */
 
 #gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    background: rgb(2, 3, 11);
-    z-index: 1;
-    min-height: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  background: rgb(2, 3, 11);
+  z-index: 1;
+  min-height: 0;
 }
 
 #gallery h3 {
-    width: 100vw;
-    color: var(--white);
+  width: 100vw;
+  color: var(--white);
 }
 
 #main-video {
-    width: calc(50vw - 90px);
-    max-height: 24.23vw;
-    background: #fff;
-    border-radius: 15px;
+  width: calc(50vw - 90px);
+  max-height: 24.23vw;
+  background: #fff;
+  border-radius: 15px;
 }
 
 #video-playlist {
-    height: 24.23vw;
-    overflow-y: auto;
+  height: 24.23vw;
+  overflow-y: auto;
 }
 
 #video-playlist::-webkit-scrollbar {
-    width: 4px;
+  width: 4px;
 }
 
 #video-playlist::-webkit-scrollbar-track {
-    background: #f1f1f130;
+  background: #f1f1f130;
 }
 
 #video-playlist::-webkit-scrollbar-thumb {
-    background: #8888884e;
-    border-radius: 4px;
+  background: #8888884e;
+  border-radius: 4px;
 }
 
 #video-playlist::-webkit-scrollbar-thumb:hover {
-    background: #55555565;
+  background: #55555565;
 }
 
 #video-playlist li {
-    display: flex;
-    margin-bottom: 20px;
+  display: flex;
+  margin-bottom: 20px;
 }
 
-.video-thumb{ 
-    width: 12.5vw;
-    height: 7.03vw;
-    background: #fff;
-    border-radius: 15px 0 0 15px;
-    border: 10px solid white;
+.video-thumb {
+  width: 12.5vw;
+  height: 7.03vw;
+  background: #fff;
+  border-radius: 15px 0 0 15px;
+  border: 10px solid white;
 }
 
 .video-details {
-    width: calc(37.5vw - 65px);
-    height: 7.03vw;
-    background: #fff;
-    border-radius: 0 15px 15px 0;
-    margin-right: 15px;
-    padding: 15px;
+  width: calc(37.5vw - 65px);
+  height: 7.03vw;
+  background: #fff;
+  border-radius: 0 15px 15px 0;
+  margin-right: 15px;
+  padding: 15px;
 }
 
 .video-details h4 {
-    font-size: 1em;
+  font-size: 1em;
 }
 
 .video-details p {
-    font-size: 0.8em;
-    height: calc(7.03vw - 30px - 1em);
-    text-indent: 0;
-    overflow: hidden; 
-    text-overflow: ellipsis; 
+  font-size: 0.8em;
+  height: calc(7.03vw - 30px - 1em);
+  text-indent: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 /* Responsividade */
 
-@media (max-width:1150px) {
-    /* About */
-    .col-1 {
-        padding: 10px 20px 10px 10px;
-    }
+/* More Information */
+@media (max-width: 945px) {
+  .item {
+    width: 380px;
+    height: 380px;
+    padding: 10px;
+    border-radius: 25px;
+    margin: 5px;
+  }
 }
 
-/* About */
-@media (max-width:1024px) {
-    .col-1, .col-2 {
-        width: 100%;
-    }
+@media (max-width: 930px) {
+  /* Gallery */
+  #gallery {
+    justify-content: center;
+  }
+  #main-video {
+    width: calc(100vw - 90px);
+    max-height: 50.62vw;
+  }
+  #video-playlist {
+    width: calc(100vw - 90px);
+    margin-top: 20px;
+    height: fit-content;
+  }
+  .video-thumb {
+    width: 25vw;
+    height: 14.99vw;
+    background: #fff;
+    border-radius: 15px 0 0 15px;
+    border: 10px solid white;
+  }
+  .video-details {
+    width: 75vw;
+    height: 14.99vw;
+    margin-right: 0;
+  }
+  #video-playlist li {
+    margin-bottom: 10px;
+  }
+  .video-details h4 {
+    font-size: 1.1em;
+  }
 
-    .square-container {
-        width: 50%;
-        padding-bottom: 50%;
-    }
-}
-
-/* General */
-@media (max-width:930px) {
-    section {
-        padding: 20px;
-    }
-    #title-name {
-        margin: 20px;
-    }
-    nav ul {
-        margin: 25px 20px;
-    }
-    nav svg {
-        margin: 25px 20px;
-    }
-    /* Gallery */
-    #gallery {
-        justify-content: center;
-    }
-    #main-video {
-        width: calc(100vw - 90px);
-        max-height: 50.62vw;
-    }
-    #video-playlist {
-        width: calc(100vw - 90px);
-        margin-top: 20px;
-        height: fit-content;
-    }
-    .video-thumb{ 
-        width: 25vw;
-        height: 14.99vw;
-        background: #fff;
-        border-radius: 15px 0 0 15px;
-        border: 10px solid white;
-    }
-    .video-details {
-        width: 75vw;
-        height: 14.99vw;
-        margin-right: 0;
-    }
-    #video-playlist li {
-        margin-bottom: 10px;
-    }
-    .video-details h4 {
-        font-size: 1.1em;
-    }
-    
-    .video-details p {
-        font-size: 0.9em;
-        height: auto;
-        max-height: 40px;
-    }
+  .video-details p {
+    font-size: 0.9em;
+    height: auto;
+    max-height: 40px;
+  }
 }
 
 /* More Information */
-@media (max-width:885px) {
-    .item {
-        width: 300px;
-        height: 300px;
-        padding: 10px;
-        border-radius: 25px;
-        margin: 5px;
-    }
+@media (max-width: 660px) {
+  .item {
+    width: 400px;
+    height: 400px;
+  }
+  .text h4 {
+    font-size: 1.6em;
+  }
+  .text p {
+    font-size: 1.4em;
+  }
 }
 
-/* Menu */
-@media (max-width:832px) {
-    .visible {
-        display: block;
-    }
-    nav ul {
-        margin: 0;
-        flex-direction: column;
-        position: fixed;
-        top: 72px;
-        width: 320px;
-        max-width: 100%;
-        background: rgba(0, 0, 0, 0.9);
-        height: 100vh;
-        padding: 0;
-        margin: 0;
-        display: none;
-    }
-    nav ul li {
-        padding: 0 15px;
-        margin: 0;
-    }
-    nav ul li a {
-        display: block;
-        font-size: 2em;
-        padding: 10px 15px;
-        margin: 0;
-    }
-    nav ul li a {
-        border-bottom: 1px solid var(--white);
-    }
-    nav ul li a:hover {
-        border: none;
-        color: #555
-    }
-    .active-section {
-        border-bottom: 1px solid var(--white);
-        color: var(--pink);
-    }
-}
 
-@media (max-width:773px) {
-    /* About */
-    .col-2 {
-        height: min-content;
-    }
-}
+/* Gallery */
+@media (max-width: 560px) {
+  #gallery {
+    padding: 15px;
+  }
+  #main-video {
+    width: calc(100vw - 30px);
+    max-height: 52.24vw;
+  }
+  #video-playlist {
+    width: calc(100vw - 30px);
+  }
+  .video-thumb {
+    width: 27vw;
+    height: 16.72vw;
+  }
+  .video-details {
+    width: 73vw;
+    height: 16.72vw;
+    padding: 8px;
+  }
+  .video-details h4 {
+    font-size: 1em;
+  }
 
-/* More Information */
-@media (max-width:660px) {
-    .item {
-        width: 400px;
-        height: 400px;
-    }
-    .text h4 {
-        font-size: 1.6em;
-    }
-    .text p {
-        font-size: 1.4em;
-    }
-}
-
-/* General */
-@media (max-width:617px) {
-    * {
-        font-size: 16px;
-    }
-}
-
-/* More Information */
-@media (max-width:610px) {
-    .items {
-        margin: 0;
-    }
-    .item {
-        width: 350px;
-        height: 350px;
-        padding: 5px;
-        border-radius: 25px;
-        margin: 5px;
-    }
-    .text h4 {
-        font-size: 1.8em;
-    }
-    .text p {
-        font-size: 1.6em;
-    }
+  .video-details p {
+    font-size: 0.9em;
+    max-height: 40px;
+  }
 }
 
 /* Gallery */
-@media (max-width:560px) {
-    #gallery {
-        padding: 15px;
-    }
-    #main-video {
-        width: calc(100vw - 30px);
-        max-height: 52.24vw;
-    }
-    #video-playlist {
-        width: calc(100vw - 30px);
-    }
-    .video-thumb{ 
-        width: 27vw;
-        height: 16.72vw;
-    }
-    .video-details {
-        width: 73vw;
-        height: 16.72vw;
-        padding: 8px;
-    }
-    .video-details h4 {
-        font-size: 1em;
-    }
-    
-    .video-details p {
-        font-size: 0.9em;
-        max-height: 40px;
-    }
+@media (max-width: 460px) {
+  .video-thumb {
+    width: 30vw;
+    height: 18.7vw;
+  }
+  .video-details {
+    width: 70vw;
+    height: 18.7vw;
+  }
 }
 
-/* About */
+@media (max-width: 400px) {
+  /* Gallery */
+  #gallery {
+    padding: 8px;
+  }
+  #main-video {
+    width: calc(100vw - 16px);
+    max-height: 53.88vw;
+    height: auto;
+  }
+  #video-playlist {
+    width: calc(100vw - 16px);
+  }
+  .video-thumb {
+    width: 30vw;
+    height: 19.08vw;
+  }
+  .video-details {
+    width: 70vw;
+    height: 19.08vw;
+    padding: 5px;
+  }
+  .video-details h4 {
+    font-size: 1em;
+  }
 
-@media (max-width:530px) {
-    .square-container {
-        width: 75%;
-        padding-bottom: 75%;
-    }
+  .video-details p {
+    font-size: 0.8em;
+    max-height: 32px;
+  }
+  /* More Information */
+  .text h4 {
+    font-size: 1.5em;
+  }
+  .text p {
+    font-size: 1.3em;
+  }
 }
-
-@media (max-width:500px) {
-    /* Header */
-    #title-name {
-        margin: 20px;
-    }
-    /* General */
-    h3 {
-        text-align: center;
-    }
-}
-
-/* Gallery */
-@media (max-width:460px) {
-    .video-thumb{ 
-        width: 30vw;
-        height: 18.7vw;
-    }
-    .video-details {
-        width: 70vw;
-        height: 18.7vw;
-    }
-}
-
-/* Header */
-@media (max-width:400px) {
-    h1 {
-        font-size: 3.1em;
-    }
-    h2 {
-        font-size: 2em;
-    }
-    /* Gallery */
-    #gallery {
-        padding: 8px;
-    }
-    #main-video {
-        width: calc(100vw - 16px);
-        max-height: 53.88vw;
-        height: auto;
-    }
-    #video-playlist {
-        width: calc(100vw - 16px);
-    }
-    .video-thumb{ 
-        width: 30vw;
-        height: 19.08vw;
-    }
-    .video-details {
-        width: 70vw;
-        height: 19.08vw;
-        padding: 5px;
-    }
-    .video-details h4 {
-        font-size: 1em;
-    }
-    
-    .video-details p {
-        font-size: 0.8em;
-        max-height: 32px;
-    }
-    /* More Information */
-    .text h4 {
-        font-size: 1.5em;
-    }
-    .text p {
-        font-size: 1.3em;
-    }
-}
-
-@media (max-width:336px) {
-    /* Header */
-    #title-name {
-        margin: 10px;
-    }
-    h1 {
-        font-size: 3rem;
-    }
-    /* General */
-    section {
-        padding: 10px;
-    }
-    #title-name {
-        margin: 10px;
-    }
-    nav ul {
-        margin: 15px 10px;
-        top: 38px;
-        right: -8px;
-    }
-    nav svg {
-        margin: 15px 10px;
-    }
-}
-
-
